--- a/package.json
+++ b/package.json
@@ -5,9 +5,19 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "css:watch": "sass --watch src/css/sass/main.scss:src/css/main.css",
+    "css:compile": "sass src/css/sass/main.scss:src/css/main.css",
+    "css:prefix": "postcss --use autoprefixer -b \"last 4 versions\" src/css/main.css -o src/css/main.css",
+    "css:compress": "css-minify -f src/css/main.css -o css",
+    "css:build": "npm-run-all css:compile css:prefix css:compress"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -18,10 +28,16 @@
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.18",
+    "concat": "^1.0.3",
+    "css-minify": "^2.0.0",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "npm-run-all": "^4.1.5",
+    "postcss-cli": "^11.0.0",
+    "sass": "^1.72.0",
     "vite": "^5.1.6"
   }
 }
